# Mold-Parting

./: CMakeLists.txt  README.md
include/: normal_estimation.h  pcl_helper.h  pcl_visualizer.h  undercut_detection.h
src/: normal_estimation.cc  parting_line.cc  pcl_helper.cc  pcl_visualizer.cc  undercut_detection.cc
